# pico-template

./: CMakeLists.txt  hello.c  hello.pio
